--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
+name: rpiplay
+version: git
 summary: Single-line elevator pitch for your amazing snap # 79 char long summary
 description: |
   This is my-snap's description. You have a paragraph or two to tell the
@@ -7,9 +7,35 @@ description: |
   we live in tweetspace and your description wants to look good in the snap
   store.
 
+base: core20
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  rpiplay:
+    plugin: autotools
+    source-type: git
+    source: https://github.com/FD-/RPiPlay.git
+    build-packages:
+      - g++
+      - make
+      - cmake
+      - libavahi-compat-libdnssd-dev 
+      - libplist-dev 
+      - libssl-dev
+      - libgstreamer1.0-dev 
+      - libgstreamer-plugins-base1.0-dev 
+      - gstreamer1.0-libav
+      - gstreamer1.0-vaapi 
+      - gstreamer1.0-plugins-bad
+    stage-packages:
+      - libavahi-compat-libdnssd-dev 
+      - libplist-dev 
+      - libssl-dev
+      - libgstreamer1.0-dev 
+      - libgstreamer-plugins-base1.0-dev 
+      - gstreamer1.0-libav
+      - gstreamer1.0-vaapi 
+      - gstreamer1.0-plugins-bad
+apps:
+  test-rpiplay:
+    command: rpiplay
