--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@ confinement: devmode # use 'strict' once you have the right plugs and slots
 
 parts:
   rpiplay:
-    plugin: autotools
+    plugin: cmake
     source-type: git
     source: https://github.com/FD-/RPiPlay.git
     build-packages:
