--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,6 +27,8 @@ parts:
       - gstreamer1.0-libav
       - gstreamer1.0-vaapi 
       - gstreamer1.0-plugins-bad
+      - libffi-dev
+      - libffi6
     stage-packages:
       - libavahi-compat-libdnssd-dev 
       - libplist-dev 
@@ -36,6 +38,8 @@ parts:
       - gstreamer1.0-libav
       - gstreamer1.0-vaapi 
       - gstreamer1.0-plugins-bad
+      - libffi-dev
+      - libffi6
 apps:
   test-rpiplay:
     command: rpiplay
